hw2-3 add hower and finished hw1

--- a/homework-task/hw2/hw2-3/style2-3.css
+++ b/homework-task/hw2/hw2-3/style2-3.css
@@ -17,6 +17,11 @@ body {
     gap: 30px;
     background-color: #c2e8c2;
 }
+.card:hover {
+    transition: 0.5s;
+    width: 320px;
+    height: 265px;
+}
 h2 {
 margin-left: 40px;
 }
