--- a/homework-task/hw8/hw8-1/style-0-375.css
+++ b/homework-task/hw8/hw8-1/style-0-375.css
@@ -1,11 +1,11 @@
-@media screen and (min-width: 0) and (max-width: 380px) {
+@media screen  and (max-width: 380px) {
     .items {
-        width: 343px;
-        display: flex;
-        flex-direction: column;
+        width: 100%;
+        padding: 32px 16px;
+        gap: 40px;
     }
     div {
-        width: 343px;
+        width: 100%;
     }
 
 
