--- a/homework-task/hw8/hw8-1/style-mobile.css
+++ b/homework-task/hw8/hw8-1/style-mobile.css
@@ -1,12 +1,10 @@
-@media screen  and (max-width: 380px) {
+@media screen and (max-width: 480px) {
     .items {
         width: 100%;
-        padding: 32px 16px;
+        padding:32px 16px;
         gap: 40px;
     }
-    div {
+    .item {
         width: 100%;
     }
-
-
 }
