--- a/homework-task/hw8/hw8-1/style-tablet.css
+++ b/homework-task/hw8/hw8-1/style-tablet.css
@@ -1,11 +1,8 @@
 @media screen and (min-width: 769px) and (max-width: 1279px) {
     .items {
         width: 720px;
-        min-height: 590px;
-
-
     }
-    div {
+    .item {
         width: 218px;
     }
 
