--- a/homework-task/hw8/hw8-1/style.css
+++ b/homework-task/hw8/hw8-1/style.css
@@ -1,45 +1,23 @@
-body {
-    display: flex;
-    justify-content: center;
-}
+
 .items {
     padding:20px 0;
+    font-family: "Inter", sans-serif;
     width: 1180px;
     margin: 0 auto;
-    height: 772px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 32px;
     flex-wrap: wrap;
 }
-div {
+.item {
     width: 372px;
     text-align: center;
 }
-img {
+.item img {
   width:100%;
 
 }
-div h2 {
-   margin: 20px 0 15px 0;
-    color:#000;
-    text-align: center;
-    font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 120%; /* 24px */
-}
-div p {
-    color:#3C3C43;
-    text-align: center;
-    font-family: 'Inter', sans-serif;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; /* 15.6px */
-    letter-spacing: 1.5px;
-    text-transform: uppercase;
-}
+
 
 
